Basic drag&drop internal order changing

--- a/src/qt_ui/game_instance.ui
+++ b/src/qt_ui/game_instance.ui
@@ -66,6 +66,15 @@
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
       </property>
+      <attribute name="horizontalHeaderCascadingSectionResizes">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>true</bool>
+      </attribute>
      </widget>
     </item>
     <item>
