--- a/src/qt_ui/game_instance.ui
+++ b/src/qt_ui/game_instance.ui
@@ -38,6 +38,13 @@
        </spacer>
       </item>
       <item>
+       <widget class="QPushButton" name="settingsButton">
+        <property name="text">
+         <string>Settings</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="refreshUiButton">
         <property name="text">
          <string>Refresh UI</string>
@@ -172,5 +179,38 @@
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>addModButton</sender>
+   <signal>clicked()</signal>
+   <receiver>TEMP_modPathLineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>540</x>
+     <y>416</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>471</x>
+     <y>335</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>addModButton</sender>
+   <signal>clicked()</signal>
+   <receiver>modNameLineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>433</x>
+     <y>405</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>398</x>
+     <y>267</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
