--- a/src/qt_ui/game_instance.ui
+++ b/src/qt_ui/game_instance.ui
@@ -179,38 +179,5 @@
   </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>addModButton</sender>
-   <signal>clicked()</signal>
-   <receiver>TEMP_modPathLineEdit</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>540</x>
-     <y>416</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>471</x>
-     <y>335</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>addModButton</sender>
-   <signal>clicked()</signal>
-   <receiver>modNameLineEdit</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>433</x>
-     <y>405</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>398</x>
-     <y>267</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
